webapp/static/to_compile/styles/qfdmd.css
@import "./carte.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  p a {
    @apply qf-text-blue-france-sun-113-625;
  }

  pre,
  code {
    @apply qf-text-blue-france-sun-113-625 qf-font-bold;
  }
}

@layer components {
  .qf-btn {
    @apply qf-rounded-full qf-py-3v qf-px-3w qf-bg-none qf-bg-green-menthe-sun-373-moon-652;
    @apply qf-text-blue-france-975-75 qf-font-bold;
    @apply hover:!qf-bg-green-menthe-sun-373-moon-652-hover qf-transition-colors;
  }

  /* Apply modal height only when carte-wrapper is inside a DSFR modal */
  .fr-modal__content .carte-wrapper {
    /*
    3.5rem : margin bottom on modal content,
    65px: height of modal header
    */
    @apply qf-h-[calc(var(--modal-max-height)-65px)];
  }
}

.cmsfr-block-carte {
  .fr-modal__content {
    @apply !qf-mb-1v;
  }
  .fr-modal__body {
    --modal-max-height: 100vh !important;
  }
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
  appearance: none;
}

.fr-footer__logo {
  @apply qf-max-h-12w;
}

:root {
  --header-height: 72px;
}

